--- a/style.css
+++ b/style.css
@@ -4,3 +4,32 @@ h3, p, ol, ul, li, a {
     border: 0;
     margin: 0;
 }
+
+body {
+    padding: 20px 20px 20px 20px;
+}
+
+h1 {
+    margin: 10px 0 15px 0;
+    color: #7facaa;
+}
+
+h2 {
+    margin: 10px 0 20px 0;
+    color: #7facaa;
+}
+
+h3 {
+    margin: 15px 0 15px 0;
+    border-bottom: 1px solid #CCCCCC;
+    padding-bottom: 3px;
+    color: #7facaa;
+}
+
+ul {
+    padding: 0 0 0 50px;
+}
+
+ol {
+    padding: 0 0 0 50px;
+}
