--- a/style.css
+++ b/style.css
@@ -50,9 +50,10 @@ ol {
 .recipes {
     list-style-type: none;
     padding: 0;
-}
+}   
 
 .recipes li {
     border: 1px solid #b56663;
     padding-left: 15px;
+    margin-bottom: 4px;
 }
