--- a/style.css
+++ b/style.css
@@ -66,3 +66,17 @@ ol {
     color: #7facaa;
     text-decoration: none;
 }
+
+body {
+    padding: 0 0 0 0;
+}
+
+.header {
+    padding: 10px 10px 10px 10px;
+}
+
+.main-content {
+    padding: 20px 20px 20px 20px;
+    border: 1px solid #dddddd;
+    margin: 30px 0 0 0;
+}
