--- a/style.css
+++ b/style.css
@@ -85,6 +85,7 @@ body {
 }
 
 .main-content {
+    width: 500px;
     padding: 20px 20px 20px 20px;
     border: 1px solid #dddddd;
     margin: 30px 0 0 0;
