Center .main-content setting margin left and right to auto

--- a/style.css
+++ b/style.css
@@ -88,5 +88,5 @@ body {
     width: 500px;
     padding: 20px 20px 20px 20px;
     border: 1px solid #dddddd;
-    margin: 30px 0 0 0;
+    margin: 30px auto 0 auto;
 }
