--- a/style.css
+++ b/style.css
@@ -36,6 +36,7 @@ ol {
 
 .nav {
     padding-left: 0;
+    text-align: center;
 }
 
 .nav a {
@@ -82,6 +83,7 @@ body {
 
 .header h1 {
     color: #ffffff;
+    text-align: center;
 }
 
 .main-content {
