Add css for photos in magic_cake.html
* li
  1. no bullet
  2. display inline
  3. padding-left 11px
* img
  width 30%

--- a/style.css
+++ b/style.css
@@ -92,3 +92,17 @@ body {
     border: 1px solid #dddddd;
     margin: 30px auto 0 auto;
 }
+
+.photos {
+    list-style-type: none;
+    padding: 0;
+}
+
+.photos li {
+    display: inline;
+    padding-left: 11px;
+}
+
+.photos img {
+    width: 30%;
+}
