--- a/style.css
+++ b/style.css
@@ -7,6 +7,19 @@ h3, p, ol, ul, li, a {
 
 body {
     padding: 20px 20px 20px 20px;
+    background-color: whitesmoke;
+    background-image: url(images/background.png);
+    background-size: 10%;
+    background-position: top left;
+    background-repeat: repeat;
+}
+
+.main-content {
+    background-color: white
+}
+
+.recipes li {
+    background-color: #ffffff;
 }
 
 h1 {
