--- a/style.css
+++ b/style.css
@@ -12,6 +12,7 @@ body {
     background-size: 10%;
     background-position: top left;
     background-repeat: repeat;
+    font-family: Helvetica, Arial, "Times New Roman", sans-serif;
 }
 
 .main-content {
