--- a/style.css
+++ b/style.css
@@ -33,6 +33,8 @@ h1 {
 h2 {
     margin: 10px 0 20px 0;
     color: #7facaa;
+    font-size: 26px;
+    font-weight: bold;
 }
 
 h3 {
@@ -87,7 +89,7 @@ ol {
 .recipes img {
     float: left;
     padding-right: 10px;
-    width: 15%;
+    width: 12%;
 }
 
 body {
@@ -147,5 +149,24 @@ body {
     background-color: #333333;
     color: #ffffff;
     padding: 5px 0 5px 15px;
+    text-transform: uppercase;
+}
+
+.footer {
+    background-color: #b56663;
+    position:absolute;
+    bottom:0;
+    left:0;
+    width:100%;
+    padding-bottom: 20px;
+    padding-top: 20px;
+}
+
+.footer p {
+    color: #aaaaaa;
+    text-align: center;
+    font-weight: bold;
+    font-size: 12px;
+    font-style: italic;
     text-transform: uppercase;
 }
