--- a/style.css
+++ b/style.css
@@ -174,3 +174,44 @@ body {
     font-style: italic;
     text-transform: uppercase;
 }
+
+label, input {
+    display: block;
+}
+
+label {
+    margin-bottom: 10px;
+}
+
+input {
+    width: 480px;
+    margin-bottom: 25px;
+}
+
+input[type=submit] {
+    width: 250px;
+    font-size: 15px;
+}
+
+input[type=text] {
+    border: 2px solid #7facaa;
+    font-size: 24px;
+    padding: 7px
+}
+
+textarea {
+    width: 480px;
+    height: 200px;
+    padding: 7px;
+    border: 2px solid #7facaa;
+    margin-bottom: 25px;
+    font-size: 24px;
+}
+
+input[type="checkbox"], label[for="newsletter"] {
+	display: inline;
+}
+
+input[type="checkbox"] {
+	width: 20px;
+}
